--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
-  "name": "ember-yannotate",
-  "version": "0.0.0",
-  "author": "Gabriel Dehan",
-  "license": "WTFYT",
+  "name": "lolimprove-annotate",
+  "version": "0.0.1",
   "private": true,
-  "main": "Gruntfile.js",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember test"
+  },
+  "repository": "https://github.com/LoLImprove/LoLImprove-annotate",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "author": "",
+  "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-qunit": "~0.2.2",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-sweet.js": "*",
-    "grunt-neuter": "~0.4.0",
-    "grunt-ember-templates": "~0.4.10",
-    "grunt-jsdoc": "*",
-    "grunt-neuter": "~0.4.0",
-    "grunt-bower-task": "~0.4.0",
-    "grunt-release-it": "~0.2.0"
+    "body-parser": "^1.2.0",
+    "broccoli-asset-rev": "0.1.1",
+    "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "ember-cli": "0.0.46",
+    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.0.2",
+    "ember-cli-qunit": "0.1.0",
+    "ember-data": "1.0.0-beta.10",
+    "express": "^4.8.5",
+    "glob": "^4.0.5"
+  },
+  "keywords": [
+    "ember-addon",
+    "lolimprove"
+  ],
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
+  },
+  "dependencies": {
   }
 }
