--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ember-cli": "0.0.46",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.0.2",
+    "ember-cli-moment": "^0.0.1",
     "ember-cli-qunit": "0.1.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
