--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ember": "1.7.0",
     "ember-model": "^0.0.14",
     "ember-resolver": "~0.1.7",
+    "ember-inflector": "^1.3.1",
     "loader": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
